# llm-min

./: .editorconfig  .gitignore  .pr_agent.toml  DEVELOPMENT.md  README.md  dev.sh  pyproject.toml  requirements.txt  run_test.py
.github/: copilot-instructions.md
.github/workflows/: test.yml
scripts/: test-all.sh  test-e2e.sh  test-unit.sh
src/: __init__.py  conftest.py  openai_wrapper.py  test_openai_wrapper.py  test_openai_wrapper_e2e.py  test_openai_wrapper_unit.py  test_runner.py  test_text_chat.py  text_chat.py
src/text_chat/: text_chat.py
tests/: test_text_chat.py
