[project]
name = "text-chat"
version = "0.1.0"
description = "Minimal LLM chat interface for OpenAI"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[dependency-groups]
tools = [
    "pytest>=7.0.0",
    "isort>=6.0.1",
]

[project.scripts]
# 'uv run test' will run pytest, avoiding the broken py.test entry point
test = "pytest:main"
# 'uv run lint' will run isort to sort imports
lint = "isort.main:main"
