[project]
name = "text-chat"
version = "0.1.0"
description = "Minimal LLM chat interface for OpenAI"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
  "unit: marks tests as unit tests (no external dependencies)",
  "e2e: marks tests as end-to-end tests (requires API keys)",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
tools = [
    "pytest>=7.0.0",
    "isort>=6.0.1",
]

[project.scripts]
# Run only unit tests (fast, no API key needed) - default for CI/CD
test-unit = "test_runner:run_unit_tests"
# Run only end-to-end tests (slow, requires API key)
test-e2e = "test_runner:run_e2e_tests"
# Run all tests (unit + e2e)
test-all = "test_runner:run_all_tests"
# 'uv run lint' will run isort to sort imports
lint = "isort.main:main"
